# Learning

./: .gitignore  LICENSE.md  LearningHaskell.cabal  README.md  build.gradle  project.clj
clojure/: README.md  project.clj
clojure/general/: project.clj
clojure/general/doc/: intro.md
clojure/general/src/general_clojure/: util.clj
clojure/koans/: .gitignore
clojure/koans/src/koans/: 01_equalities.clj  02_lists.clj  06_functions.clj  07_conditionals.clj  08_higher_order_functions.clj  09_runtime_polymorphism.clj  10_lazy_sequences.clj  13_recursion.clj  14_destructuring.clj  15_refs.clj  16_atoms.clj  17_macros.clj  18_datatypes.clj  19_java_interop.clj  21_group_by.clj  22_meta.clj
clojure/src/general_clojure/: algebra.clj  closures.clj  math.clj  util.clj
elixir/: README.md  mix.exs
elixir/lib/: learning_elixir.ex  maths.ex
gradle/wrapper/: gradle-wrapper.properties
groovy/: .gitignore
groovy/Learning/: build.gradle
groovy/Learning/src/: Learning.groovy
groovy/groovy_koans/koans/: CollectionsKoans.groovy  DateKoans.groovy  OperatorOverloadingKoans.groovy  RangesKoans.groovy  StringKoans.groovy  TruthKoans.groovy
haskell/: .gitignore  LearningHaskell.cabal  README.md
haskell/Trees/: Tree.hs
haskell/cis194/: cis194.cabal  hscolour.css
haskell/cis194/src/: Homework1.hs  Lib.hs
haskell/cis194/src/H1/: Hanoi.hs  Validate.hs
haskell/cis194/src/H2/: Log.hs  LogAnalysis.hs
haskell/cis194/src/H3/: Golf.html  Golf.lhs
haskell/cis194/src/H4/: Folding.hs  Sundaram.hs  Wholemeal.hs
haskell/cis194/src/H5/: Calc.hs  Parser.hs
haskell/cis194/src/H6/: Fib.hs  Generating.hs  Matrix.hs  Stream.hs
haskell/playground/: LearningHaskell.cabal
haskell/src/: All.hs
haskell/src/Trees/: BinaryTree.hs  LinkedList.hs  Tree.hs
haskell/src/Util/: Util.hs
haskell/src/math/: Geometry.hs  Math.hs  Matrix.hs
haskell/wyas/: LICENSE  wyas.cabal
haskell/wyas/src/: Eval.hs  Lisp.hs  Main.hs  Primitives.hs
haskell/wyas/src/parse/: NumParse.hs  Parsing.hs  StrParse.hs
lib/: learning_elixir.ex  maths.ex
p5/diffusion/: index.html  sketch.js
p5/empty/: index.html
p5/grapher/: graph.js  index.html  sketch.js
p5/lsystems/: index.html  sketch.js  system.js
p5/maze/: cell.js  index.html  sketch.js
p5/maze/libraries/: underscore.js
p5/supershape/: sketch.js
prolog/: batman.prolog  kb5.prolog
scala/: README.md  settings.gradle
src/: Learning.scala  Timer.scala
src/Hello/: hello  hello.hi
src/Trees/: BinaryTree.hs  Tree.hs
src/Util/: Util.hs
src/divisible/: divisible  divisible.hi  divisible.hs
src/factorial/: factorial  factorial.hi  factorial.hs
src/fibonacci/: fibonacci  fibonacci.hi  fibonacci.hs
src/general_clojure/: algebra.clj  calculus.clj  closures.clj  core.clj  math.clj  util.clj
src/math/: Math.hs
test/: learning_elixir_test.exs  maths_test.exs
test/general_clojure/: core_test.clj  math_test.clj
(+36 files in other folders)
