name:                cis194
version:             0.1.0.0
synopsis:            Cis194 project with haskeleton template
description:         "Learning Haskell through cis194"
license:             MIT
license-file:        LICENSE.md
author:              Strikingwolf
maintainer:          Strikingwolf2012@gmail.com
-- copyright:
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Homework1
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Strikingwolf/Learning
