name:                cis194
version:             0.1.0.0
synopsis:            Cis194 project with haskeleton template
description:         "Learning Haskell through cis194"
license:             MIT
license-file:        LICENSE.md
author:              Strikingwolf
maintainer:          Strikingwolf2012@gmail.com
-- copyright:
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       H1.Hanoi, H1.Validate, H2.Log, H2.LogAnalysis, H3.Golf
  build-depends:       base >= 4.7 && < 5, text, containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Strikingwolf/Learning
