name:                wyas
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Strikingwolf/wyas#readme
license:             MIT
license-file:        LICENSE
author:              Strikingwolf
maintainer:          Strikingwolf2012@gmail.com
copyright:           MIT
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable wyas
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parse.Parsing
                     , Parse.NumParse
                     , Parse.StrParse
                     , Lisp
                     , Eval
                     , Primitives
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec == 3.1.11
  default-language:    Haskell2010

test-suite wyas-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wyas
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Strikingwolf/Learning
